Few cleanups over the code and use more Java 9+ features