@@ -88,26 +88,23 @@ public final class SuggestionHelper {
                     // only property, no value yet
                     final List<? extends Property<?>> matchingProps = propertyMap.entrySet().stream()
                             .filter(p -> !matchedProperties.contains(p.getKey()) && p.getKey().startsWith(matchProp))
-                            .map(Map.Entry::getValue).collect(Collectors.toList());
-                    switch (matchingProps.size()) {
-                        case 0:
-                            return propertyMap.keySet().stream().filter(p -> !matchedProperties.contains(p)).map(prop ->
-                                    lastValidInput + prop + "=");
-                        case 1:
-                            return matchingProps.get(0).getValues().stream().map(val ->
-                                    lastValidInput +  matchingProps.get(0).getName() + "="
-                                            + val.toString().toLowerCase(Locale.ROOT));
-                        default:
-                            return matchingProps.stream().map(p -> lastValidInput + p.getName() + "=");
-                    }
+                            .map(Map.Entry::getValue).toList();
+                    return switch (matchingProps.size()) {
+                        case 0 -> propertyMap.keySet().stream().filter(p -> !matchedProperties.contains(p)).map(prop ->
+                            lastValidInput + prop + "=");
+                        case 1 -> matchingProps.get(0).getValues().stream().map(val ->
+                            lastValidInput + matchingProps.get(0).getName() + "="
+                                + val.toString().toLowerCase(Locale.ROOT));
+                        default -> matchingProps.stream().map(p -> lastValidInput + p.getName() + "=");
+                    };
                 } else {
                     Property<?> prop = propertyMap.get(matchProp);
                     if (prop == null) {
                         return propertyMap.keySet().stream().map(p -> lastValidInput + p);
                     }
-                    final List<String> values = prop.getValues().stream().map(v -> v.toString().toLowerCase(Locale.ROOT)).collect(Collectors.toList());
+                    final List<String> values = prop.getValues().stream().map(v -> v.toString().toLowerCase(Locale.ROOT)).toList();
                     String matchVal = propVal[1].toLowerCase(Locale.ROOT);
-                    List<String> matchingVals = values.stream().filter(val -> val.startsWith(matchVal)).collect(Collectors.toList());
+                    List<String> matchingVals = values.stream().filter(val -> val.startsWith(matchVal)).toList();
                     if (matchingVals.isEmpty()) {
                         return values.stream().map(val -> lastValidInput + prop.getName() + "=" + val);
                     } else {
